      we never stay up for a week ourselves.

  o Major bugfixes:
    - Fix a longstanding bug in eventdns that prevented the count of
      timed-out resolves from ever being reset. This bug caused us to
      give up on a nameserver the third time it timed out, and try it
      10 seconds later... and to give up on it every time it timed out
      after that. (May fix bug 326.)

  o Minor bugfixes:
    - Fix a bug when a PF socket is first used. (Patch from Fabian Keil.)
    - Fix an assert failure when a directory authority sets
      AuthDirRejectUnlisted and then receives a descriptor from an
      unlisted router (reported by seeess).
    - Fix a bug on the Windows implementation of tor_mmap_file that
      would prevent the cached-routers file from ever loading (reported
      by John Kimble).
    - Fix a bug in 0.1.2.2-alpha that prevented clients from asking
      to resolve an address at a given exit node even when they ask for
      it by name.
    - Routers no longer ever list themselves in their "family" line,
      even if configured to do so.  This makes it easier to configure
      family lists efficiently.
    - When running as a server, don't fall back to 127.0.0.1 when no
      nameservers are configured in /etc/resolv.conf; instead, make the
      user fix resolv.conf or specify nameservers explicitly. (Resolves
      bug 363.)

  o Controller features:
    - Have GETINFO dir/status/* work on hosts with DirPort disabled.
    - Reimplement GETINFO so that info/names stays in sync with the
      actual keys.
    - Implement "GETINFO fingerprint".
    - Implement "SETEVENTS GUARD" so controllers can get updates on
      entry guard status as it changes.

  o Controller bugfixes:
    - Report the circuit number correctly in STREAM CLOSED events. (Bug
      reported by Mike Perry.)
    - Do not report bizarre values for results of accounting GETINFOs
      when the last second's write or read exceeds the alloted bandwidth.

