@@ -321,15 +321,13 @@ connection_edge_finished_connecting(edge_connection_t *edge_conn)
 
 /** Define a schedule for how long to wait between retrying
  * application connections. Rather than waiting a fixed amount of
- * time between each retry, we wait only 5 seconds for the first,
- * 10 seconds for the second, and 15 seconds for each retry after
+ * time between each retry, we wait 10 seconds each for the first
+ *  two tries, and 15 seconds for each retry after
  * that. Hopefully this will improve the expected user experience. */
 static int
 compute_socks_timeout(edge_connection_t *conn)
 {
-  if (conn->num_socks_retries == 0)
-    return 5;
-  if (conn->num_socks_retries == 1)
+  if (conn->num_socks_retries < 2) /* try 0 and try 1 */
     return 10;
   return 15;
 }
